# my_bot

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPLETE_GUIDE.md  FAQ.md  HARDWARE_DEPLOYMENT.md  INSTALLATION_GUIDE.md  LICENSE.md  QUICK_START.md  README.md  RUNNING_GUIDE.md  package.xml
arduino/: README.md  differential_drive_controller.ino
config/: 99-robot-devices.rules  mapper_params_online_async.yaml  mapper_params_online_async_hardware.yaml  mapper_params_online_async_sim.yaml  my_controllers.yaml  my_map.yaml  my_map_save.pgm  my_map_save.yaml  nav2_params.yaml  nav2_params_hardware.yaml  nav2_params_sim.yaml  nav2_view.rviz  real_lidar.rviz  slam_view.rviz  view_bot.rviz
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  lidar_hardware.xacro  lidar_sim.xacro  robot.urdf.xacro  robot_core.xacro  robot_hardware.urdf.xacro  robot_sim.urdf.xacro  ros2_control.xacro  ros2_control_hardware.xacro
firmware/: motor_controller.ino
firmware/motor_controller/: motor_controller.ino
launch/: bringup_hardware.launch.py  launch_real_lidar.launch.py  launch_robot.launch.py  launch_sim.launch.py  navigation_hardware.launch.py  navigation_launch.py  rplidar.launch.py  rsp_hardware.launch.py  rviz_remote.launch.py  sim_gazebo.launch.py  sim_nav2.launch.py  sim_slam.launch.py  slam.launch.py  slam_hardware.launch.py
scripts/: diff_drive_node.py  odom_to_tf_node.py  serial_motor_controller.py  setup_network.sh  start_robot.sh  twist_relay.py
worlds/: empty_world.sdf  my_world.sdf  obstacle_world.sdf  obstacle_world_2.sdf  simple_room.sdf
